--- a/chatbot_new5-Copy5.ipynb
+++ b/chatbot_new5-Copy5.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "source": [
     "# Project 1: A rule based chatbot\n",
-    "+ student name: Henry Liu Bo Chen\n",
-    "+ student id: 22672083 22672145"
+    "+ student name: Henry Liu \n",
+    "+ student id: 22672083 "
    ]
   },
   {
